// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders correctly 1`] = `
<div
  className="MuiFormControl-root CustomInput-formControl-9"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root CustomInput-labelRoot-6  MuiInputLabel-formControl MuiInputLabel-animated Mui-required Mui-required"
    data-shrink={false}
  >
    Required
    <span
      className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
    >
       
      *
    </span>
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline CustomInput-underline-2 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input CustomInput-input-10"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root Mui-required"
    id="undefined_error_msg"
  >
    
  </p>
</div>
`;

exports[`<Input /> renders correctly if formControlProps and labelText is not passed 1`] = `
<div
  className="MuiFormControl-root CustomInput-formControl-9"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline CustomInput-underline-2 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input CustomInput-input-10"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root"
    id="undefined_error_msg"
  >
    
  </p>
</div>
`;

exports[`<Input /> renders correctly in error state 1`] = `
<div
  className="MuiFormControl-root CustomInput-formControl-9"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root CustomInput-labelRoot-6  MuiInputLabel-formControl MuiInputLabel-animated"
    data-shrink={false}
  >
    Error Input Prop
  </label>
  <div
    aria-label="Description"
    className="MuiInputBase-root MuiInput-root MuiInput-underline CustomInput-underline-2 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      className="MuiInputBase-input MuiInput-input CustomInput-input-10"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root"
    id="undefined_error_msg"
  >
    
  </p>
</div>
`;

exports[`<Input /> renders correctly in success state 1`] = `
<div
  className="MuiFormControl-root CustomInput-formControl-9"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root CustomInput-labelRoot-6  CustomInput-labelRootSuccess-8 MuiInputLabel-formControl MuiInputLabel-animated"
    data-shrink={false}
  >
    Success Prop
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline CustomInput-underlineSuccess-4 CustomInput-underline-2 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input CustomInput-input-10"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root"
    id="undefined_error_msg"
  >
    
  </p>
</div>
`;
